Update Form selector dialog to trap focus, fix some spacing, and allow using enter key to select form 24 type

--- a/front-end/src/app/reports/form-type-dialog/form-type-dialog.component.scss
+++ b/front-end/src/app/reports/form-type-dialog/form-type-dialog.component.scss
@@ -86,3 +86,7 @@ label {
   border-radius: 0.25rem;
   opacity: 0.5;
 }
+
+.modal-item-margin {
+  margin-top: 32px;
+}
